styling and attribution

--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
         </div>
 
         <div class="game-content">
-            <div class="generators-row">
-                <div class="shop-section">
-                    <h3>⚡ NEW GENERATORS ⚡</h3>
-                    <div class="shop-cards" id="generator-shop"></div>
-                </div>
+            <div class="play-areas-row">
                 <div class="generators-section">
                     <h3>⚡ GENERATORS ⚡</h3>
                     <div class="generator-slots">
@@ -63,13 +59,6 @@
                         <div class="card-slot generator-slot" data-slot="6"></div>
                         <div class="card-slot generator-slot" data-slot="7"></div>
                     </div>
-                </div>
-            </div>
-
-            <div class="consumers-row">
-                <div class="shop-section">
-                    <h3>💡 NEW INCENTIVES 💡</h3>
-                    <div class="shop-cards" id="incentive-shop"></div>
                 </div>
                 <div class="consumers-section">
                     <h3>🏠 CONSUMERS 🏠</h3>
@@ -85,12 +74,26 @@
                     </div>
                 </div>
             </div>
+
+            <div class="shops-row">
+                <div class="shop-section">
+                    <h3>⚡ NEW GENERATORS ⚡</h3>
+                    <div class="shop-cards" id="generator-shop"></div>
+                </div>
+                <div class="shop-section">
+                    <h3>💡 NEW INCENTIVES 💡</h3>
+                    <div class="shop-cards" id="incentive-shop"></div>
+                </div>
+            </div>
         </div>
 
-        <div class="help-section">
-            <div class="game-instructions">
-                <span class="instructions-header">📖 Goal: Replace all fossil generators with clean energy! Click shop cards to place them, keep all values positive.</span>
-            </div>
+        <div class="goal-section">
+            <p>📖 Goal: Replace all fossil generators with clean energy! Click shop cards to place them, keep all values positive.</p>
+        </div>
+
+        <div class="attribution-section">
+            <p>Based on the card game by Dr Sage Ralph and Jane Reed for SSEN at <a href="https://hackpompey.co.uk/" target="_blank" rel="noopener noreferrer">Hack Pompey</a> Watt-Works 2025</p>
+            <a href="https://github.com/SageRalph/Power-Flex" target="_blank" rel="noopener noreferrer">GitHub Repository</a>
         </div>
 
     </div>
