various styling and code improvements

--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
             <div class="play-areas-row">
                 <section class="generators-section" aria-label="Generator Grid">
                     <h3>⚡ GENERATORS ⚡</h3>
-                    <div class="generator-slots">
-                        <div class="card-slot generator-slot" data-slot="0"></div>
-                        <div class="card-slot generator-slot" data-slot="1"></div>
-                        <div class="card-slot generator-slot" data-slot="2"></div>
-                        <div class="card-slot generator-slot" data-slot="3"></div>
-                        <div class="card-slot generator-slot" data-slot="4"></div>
-                        <div class="card-slot generator-slot" data-slot="5"></div>
-                        <div class="card-slot generator-slot" data-slot="6"></div>
-                        <div class="card-slot generator-slot" data-slot="7"></div>
+                    <div class="game-grid--generators">
+                        <div class="slot slot--generator" data-slot="0"></div>
+                        <div class="slot slot--generator" data-slot="1"></div>
+                        <div class="slot slot--generator" data-slot="2"></div>
+                        <div class="slot slot--generator" data-slot="3"></div>
+                        <div class="slot slot--generator" data-slot="4"></div>
+                        <div class="slot slot--generator" data-slot="5"></div>
+                        <div class="slot slot--generator" data-slot="6"></div>
+                        <div class="slot slot--generator" data-slot="7"></div>
                     </div>
                 </section>
                 <section class="consumers-section" aria-label="Consumer Grid">
                     <h3>🏠 CONSUMERS 🏠</h3>
-                    <div class="consumer-slots">
-                        <div class="card-slot consumer-slot" data-slot="0"></div>
-                        <div class="card-slot consumer-slot" data-slot="1"></div>
-                        <div class="card-slot consumer-slot" data-slot="2"></div>
-                        <div class="card-slot consumer-slot" data-slot="3"></div>
-                        <div class="card-slot consumer-slot" data-slot="4"></div>
-                        <div class="card-slot consumer-slot" data-slot="5"></div>
-                        <div class="card-slot consumer-slot" data-slot="6"></div>
-                        <div class="card-slot consumer-slot" data-slot="7"></div>
+                    <div class="game-grid--consumers">
+                        <div class="slot slot--consumer" data-slot="0"></div>
+                        <div class="slot slot--consumer" data-slot="1"></div>
+                        <div class="slot slot--consumer" data-slot="2"></div>
+                        <div class="slot slot--consumer" data-slot="3"></div>
+                        <div class="slot slot--consumer" data-slot="4"></div>
+                        <div class="slot slot--consumer" data-slot="5"></div>
+                        <div class="slot slot--consumer" data-slot="6"></div>
+                        <div class="slot slot--consumer" data-slot="7"></div>
                     </div>
                 </section>
             </div>
@@ -78,11 +78,11 @@
             <div class="shops-row">
                 <section class="shop-section" aria-label="Generator Shop">
                     <h3>⚡ NEW GENERATORS ⚡</h3>
-                    <div class="shop-cards" id="generator-shop" role="group" aria-label="Available Generators"></div>
+                    <div class="shop__grid" id="generator-shop" role="group" aria-label="Available Generators"></div>
                 </section>
                 <section class="shop-section" aria-label="Incentive Shop">
                     <h3>💡 NEW INCENTIVES 💡</h3>
-                    <div class="shop-cards" id="incentive-shop" role="group" aria-label="Available Incentives"></div>
+                    <div class="shop__grid" id="incentive-shop" role="group" aria-label="Available Incentives"></div>
                 </section>
             </div>
         </main>
